card board update

--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -5126,7 +5126,7 @@ strong {
                 <div class="Grid Grid--full Grid--gutters">
   <div class="Grid-cell">
     <div class="element">
-      <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
         <img src="./PlaceholderDark_zeroBorderRadius.svg" alt="Placeholder">
         <div class="element">
           <h5>tag(s)</h5>
@@ -7456,7 +7456,7 @@ strong {
   <div class="element">
     <a class="no-hover-effect" href="/design_system/navigation/">
       <div class="">
-        <div class=" elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder  float cardBorder borderRadiusS shadowBoxLt">
           <img src="/projectImages/vicky_website_short.svg" alt="Navigation Exploration">
           <div class="element">
             <div class="element">
@@ -7647,7 +7647,7 @@ strong {
     <!-- The Modal -->
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">
-      <img class="iconXforModal" src="../icon/delete.svg" alt="&times;">
+      <img class="iconXforModal" src="/icon/delete.svg" alt="modal">
     </span>
     <img id="modal-content" class="modal-content">
     <div id="modal-caption" class="modal-caption"></div>
