--- a/html/index.html
+++ b/html/index.html
@@ -355,7 +355,7 @@
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
@@ -394,7 +394,7 @@
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_B2C.png" />
           <div class="img__description">
@@ -435,7 +435,7 @@
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_AdminPanel.png" />
           <div class="img__description">
@@ -474,7 +474,7 @@
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_RXZero.png" />
           <div class="img__description">
@@ -515,7 +515,7 @@
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
@@ -555,7 +555,7 @@
   <div class="element">
     <a class="no-hover-effect" href="/glorify/">
       <div class="">
-        <div class="GLORIFY elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder GLORIFY float cardBorder borderRadiusS shadowBoxLt">
           <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
           <div class="element">
             <div class="element">
@@ -575,7 +575,7 @@
   <div class="element">
     <a class="no-hover-effect" href="/seer/">
       <div class="">
-        <div class="SEER elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder SEER float cardBorder borderRadiusS shadowBoxLt">
           <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
           <div class="element">
             <div class="element">
@@ -596,7 +596,7 @@
   <div class="element">
     <a class="no-hover-effect" href="/appointa/">
       <div class="">
-        <div class="APPOINTA elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder APPOINTA float cardBorder borderRadiusS shadowBoxLt">
           <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
           <div class="element">
             <div class="element">
@@ -643,7 +643,7 @@
   <div class="element">
     <a class="no-hover-effect" href="/design_system/">
       <div class="">
-        <div class=" elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder  float cardBorder borderRadiusS shadowBoxLt">
           <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
           <div class="element">
             <div class="element">
