--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -291,7 +291,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recreation_commons/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
@@ -347,7 +347,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./narrow_stripes/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
@@ -371,7 +371,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recovery_of_river_edges/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
@@ -403,7 +403,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./thesis_studio/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
@@ -425,7 +425,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./the_rotation_of_curves/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
@@ -456,7 +456,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./manifold_ground/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
@@ -477,7 +477,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./LACAMA/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
