error message fix
 "Password is incorrect"

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -10,11 +10,11 @@
   <link rel="canonical" href="https://vickywang.me/about">
 
   <title>
-    Professional Background and Interests - Vicky Wang
+    UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang
   </title>
-  <meta name="title" content="Professional Background and Interests - Vicky Wang">
+  <meta name="title" content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang">
   <meta name="author" content="Vicky W.">
-  <meta name="description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta name="description" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
 
 
   
@@ -23,8 +23,8 @@
         <meta property="og:locale" content="en_US">
         <meta property="og:type" content="website">
         <meta property="og:title"
-          content="Professional Background and Interests - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-        <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+          content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+        <meta property="og:" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
         <meta property="og:url" content="https://vickywang.me/about">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
@@ -33,8 +33,8 @@
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://vickywang.me/about">
-        <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
-        <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+        <meta property="twitter:title" content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang">
+        <meta property="twitter:description" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
         <meta property="twitter:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
