--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7460,7 +7460,7 @@ strong {
           <img src="/projectImages/vicky_website_short.svg" alt="Navigation Exploration">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Navigation Exploration</strong></h3>
+              <h3 class="arrCard"><strong>Navigation Exploration</strong></h3>
               <h4>Developing a more structured and logical navigation system for displaying case
                 studies
               </h4>
