--- a/html/index.html
+++ b/html/index.html
@@ -394,7 +394,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success
+              <h3 class="arrCard"><strong>Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success
                 </strong></h3>
               <h4>Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.
               </h4>
@@ -433,7 +433,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion
+              <h3 class="arrCard"><strong>Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion
                 </strong></h3>
               <h4>Improving the consumer booking flow within a dynamic service platform. Our mission was to identify and alleviate pain points in the existing booking process, with a goal to substantially elevate user engagement and increase conversion rates.
               </h4>
@@ -474,7 +474,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>LASO Admin Panel: From Concept to Reality - Simplified User Management
+              <h3 class="arrCard"><strong>LASO Admin Panel: From Concept to Reality - Simplified User Management
                 </strong></h3>
               <h4>The core focus of this panel was to efficiently manage a diverse range of user accounts, including B2B, D2C, and guest users. A unique aspect of this project was accommodating users from B2B with company sponsorship, adding another layer of complexity to the design process.
               </h4>
@@ -513,7 +513,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Shifting Focus: The Evolution of LASO to RX Zero
+              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO to RX Zero
                 </strong></h3>
               <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
               </h4>
@@ -554,7 +554,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero Savings Explorer - Cost-benefit Calculator
+              <h3 class="arrCard"><strong>RX Zero Savings Explorer - Cost-benefit Calculator
                 </strong></h3>
               <h4>This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.
               </h4>
@@ -573,7 +573,7 @@
           <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
+              <h3 class="arrCard"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
               <h4>This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.
               </h4>
             </div>
@@ -593,7 +593,7 @@
           <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
+              <h3 class="arrCard"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
               <h4>A conceptual UX case study aimed at transforming Reddit data into actionable
               insights for brand marketers. This design explores the potential of intuitive
               analytics to understand user sentiment and engagement, offering a glimpse into the
@@ -614,7 +614,7 @@
           <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
+              <h3 class="arrCard"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
               <h4>Explore my UX case study aimed at revamping interview scheduling. This project
                 streamlines the recruiter&#39;s tasks, speeds up hiring, and enhances scheduling
                 experiences, reducing interview coordination time and boosting recruitment efficiency.
@@ -661,7 +661,7 @@
           <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Scalable Design System Design and Implementation</strong></h3>
+              <h3 class="arrCard"><strong>Scalable Design System Design and Implementation</strong></h3>
               <h4>A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.
               </h4>
             </div>
