--- a/html/architecture/narrow_stripes/index.html
+++ b/html/architecture/narrow_stripes/index.html
@@ -378,50 +378,44 @@
 <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
-      <li class="tag"><span class="box"> User-centered Design</span></li>
-
-      <li class="tag"><span class="box"> Experience Design</span></li>
-      <li class="tag"><span class="box"> User Experience Design </span></li>
-      <li class="tag"><span class="box"> User Interface Design</span></li>
-      <li class="tag"><span class="box"> Interaction Design</span></li>
-
-      <li class="tag"><span class="box"> Product Design</span></li>
-      <li class="tag"><span class="box"> Service Design</span></li>
-
-      <li class="tag"><span class="box"> Design Thinking</span></li>
-      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
-      <li class="tag"><span class="box"> Journey Mapping </span></li>
-      <li class="tag"><span class="box"> Data Analysis </span></li>
+      <li class="tag"><span class="box"> B2B SaaS Product Designer</span></li>
+      <li class="tag"><span class="box"> SaaS UX Design Expert</span></li>
+      <li class="tag"><span class="box"> Mobile App Design Specialist</span></li>
 
 
 
-      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
-      <li class="tag"><span class="box"> Web Application Design</span></li>
-      <li class="tag"><span class="box"> Design System</span></li>
-      <li class="tag"><span class="box"> Graphic Design</span></li>
 
-      <li class="tag"><span class="box"> UX Research</span></li>
-      <li class="tag"><span class="box"> Design Research</span></li>
-
-      <li class="tag"><span class="box"> Design Research</span></li>
-      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-      <li class="tag"><span class="box"> Concept Testing</span></li>
-      <li class="tag"><span class="box"> Usability Testing</span></li>
-      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
-
-      <li class="tag"><span class="box"> SaaS Application Design</span></li>
-      <li class="tag"><span class="box"> B2B Application Design</span></li>
-      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+      <li class="tag"><span class="box"> User Experience Optimization for B2B SaaS </span></li>
+      <li class="tag"><span class="box"> Consumer Mobile App Design Best Practices</span></li>
 
 
-      <li class="tag"><span class="box"> Figma</span></li>
-      <li class="tag"><span class="box"> Adobe CS </span></li>
-      <li class="tag"><span class="box"> 3D Modeling</span></li>
+      <li class="tag"><span class="box"> Figma for Responsive Web Design</span></li>
+      <li class="tag"><span class="box"> Adobe Creative Suite in UX/UI Design</span></li>
+      <li class="tag"><span class="box"> Front-End Development Skills: HTML, CSS, JavaScript</span></li>
 
-      <li class="tag"><span class="box">HTML</span></li>
-      <li class="tag"><span class="box">CSS</span></li>
-      <li class="tag"><span class="box">JavaScript</span></li>
-      <li class="tag"><span class="box">GitHub</span></li>
+
+      <li class="tag"><span class="box"> Design Thinking for UX Solutions</span></li>
+      <li class="tag"><span class="box"> User-Centered Design Approach</span></li>
+      <li class="tag"><span class="box"> Journey Mapping in Product Development </span></li>
+      <li class="tag"><span class="box"> Usability Testing for Application Improvement </span></li>
+
+
+
+      <li class="tag"><span class="box"> Portfolio of SaaS UX Design Projects</span></li>
+      <li class="tag"><span class="box"> Case Studies on Enhancing User Engagement</span></li>
+      <li class="tag"><span class="box"> Success Stories in Mobile App User Interface Design</span></li>
+      <li class="tag"><span class="box"> Design Process Behind Successful Consumer Apps</span></li>
+
+
+      <li class="tag"><span class="box"> Collaborative Problem Solving in Design Teams</span></li>
+      <li class="tag"><span class="box"> Continuous Learning in UX/UI Design</span></li>
+      <li class="tag"><span class="box"> Adopting New Technologies for Design Innovation</span></li>
+      <li class="tag"><span class="box"> UX Research Techniques and Insights</span></li>
+
+
+
+      <li class="tag"><span class="box"> UX Designer in SF Bay Area for SaaS and Mobile Apps</span></li>
+
     </ul>
   </div>
   <div class="blankHL"></div>
