--- a/html/index.html
+++ b/html/index.html
@@ -371,45 +371,6 @@
     <a class="no-hover-effect">
       <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="onboardingSubscription">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success
-                </strong></h3>
-              <h4>Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
-      <div class="Grid-cell">
-  <div class="element">
-    <a class="no-hover-effect">
-      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
-        <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_B2C.png" />
           <div class="img__description">
             <div class="input-field">
@@ -444,8 +405,87 @@
     </a>
   </div>
 </div>
+      <div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
+        <div class="img__wrap">
+          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B.png" />
+          <div class="img__description">
+            <div class="input-field">
+              <div class="column">
+                <label for="onboardingSubscription">
+                  <h5>Password</h5>
+                </label>
+
+                <div class="pwContainer">
+                  <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
+                  <button class="passwordArr" type="submit">
+                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                  </button>
+                </div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <div class="element">
+              <h5>Password is required</h5>
+              <h3 class="arrCard"><strong>Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success
+                </strong></h3>
+              <h4>Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
+        <div class="img__wrap">
+          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
+          <div class="img__description">
+            <div class="input-field">
+              <div class="column">
+                <label for="rxZero">
+                  <h5>Password</h5>
+                </label>
+
+                <div class="pwContainer">
+                  <input class="PWinput psJS" type="password" id="rxZero" placeholder="Enter password">
+                  <button class="passwordArr" type="submit">
+                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                  </button>
+                </div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <div class="element">
+              <h5>Password is required</h5>
+              <h3 class="arrCard"><strong>BookYourPet Redefined: Powering Up the Pet Service Booking Revolution
+                </strong></h3>
+              <h4>Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -485,6 +525,9 @@
     </a>
   </div>
 </div>
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -524,8 +567,6 @@
     </a>
   </div>
 </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -565,6 +606,12 @@
     </a>
   </div>
 </div>
+
+    </div>
+    <div class="Grid Grid--gutters Grid--full">
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="/glorify/">
@@ -583,8 +630,6 @@
     </a>
   </div>
 </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="/seer/">
@@ -699,50 +744,44 @@
 <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
-      <li class="tag"><span class="box"> User-centered Design</span></li>
-
-      <li class="tag"><span class="box"> Experience Design</span></li>
-      <li class="tag"><span class="box"> User Experience Design </span></li>
-      <li class="tag"><span class="box"> User Interface Design</span></li>
-      <li class="tag"><span class="box"> Interaction Design</span></li>
-
-      <li class="tag"><span class="box"> Product Design</span></li>
-      <li class="tag"><span class="box"> Service Design</span></li>
-
-      <li class="tag"><span class="box"> Design Thinking</span></li>
-      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
-      <li class="tag"><span class="box"> Journey Mapping </span></li>
-      <li class="tag"><span class="box"> Data Analysis </span></li>
+      <li class="tag"><span class="box"> B2B SaaS Product Designer</span></li>
+      <li class="tag"><span class="box"> SaaS UX Design Expert</span></li>
+      <li class="tag"><span class="box"> Mobile App Design Specialist</span></li>
 
 
 
-      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
-      <li class="tag"><span class="box"> Web Application Design</span></li>
-      <li class="tag"><span class="box"> Design System</span></li>
-      <li class="tag"><span class="box"> Graphic Design</span></li>
 
-      <li class="tag"><span class="box"> UX Research</span></li>
-      <li class="tag"><span class="box"> Design Research</span></li>
-
-      <li class="tag"><span class="box"> Design Research</span></li>
-      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-      <li class="tag"><span class="box"> Concept Testing</span></li>
-      <li class="tag"><span class="box"> Usability Testing</span></li>
-      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
-
-      <li class="tag"><span class="box"> SaaS Application Design</span></li>
-      <li class="tag"><span class="box"> B2B Application Design</span></li>
-      <li class="tag"><span class="box"> Consumer-Facing Design</span></li>
+      <li class="tag"><span class="box"> User Experience Optimization for B2B SaaS </span></li>
+      <li class="tag"><span class="box"> Consumer Mobile App Design Best Practices</span></li>
 
 
-      <li class="tag"><span class="box"> Figma</span></li>
-      <li class="tag"><span class="box"> Adobe CS </span></li>
-      <li class="tag"><span class="box"> 3D Modeling</span></li>
+      <li class="tag"><span class="box"> Figma for Responsive Web Design</span></li>
+      <li class="tag"><span class="box"> Adobe Creative Suite in UX/UI Design</span></li>
+      <li class="tag"><span class="box"> Front-End Development Skills: HTML, CSS, JavaScript</span></li>
 
-      <li class="tag"><span class="box">HTML</span></li>
-      <li class="tag"><span class="box">CSS</span></li>
-      <li class="tag"><span class="box">JavaScript</span></li>
-      <li class="tag"><span class="box">GitHub</span></li>
+
+      <li class="tag"><span class="box"> Design Thinking for UX Solutions</span></li>
+      <li class="tag"><span class="box"> User-Centered Design Approach</span></li>
+      <li class="tag"><span class="box"> Journey Mapping in Product Development </span></li>
+      <li class="tag"><span class="box"> Usability Testing for Application Improvement </span></li>
+
+
+
+      <li class="tag"><span class="box"> Portfolio of SaaS UX Design Projects</span></li>
+      <li class="tag"><span class="box"> Case Studies on Enhancing User Engagement</span></li>
+      <li class="tag"><span class="box"> Success Stories in Mobile App User Interface Design</span></li>
+      <li class="tag"><span class="box"> Design Process Behind Successful Consumer Apps</span></li>
+
+
+      <li class="tag"><span class="box"> Collaborative Problem Solving in Design Teams</span></li>
+      <li class="tag"><span class="box"> Continuous Learning in UX/UI Design</span></li>
+      <li class="tag"><span class="box"> Adopting New Technologies for Design Innovation</span></li>
+      <li class="tag"><span class="box"> UX Research Techniques and Insights</span></li>
+
+
+
+      <li class="tag"><span class="box"> UX Designer in SF Bay Area for SaaS and Mobile Apps</span></li>
+
     </ul>
   </div>
   <div class="blankHL"></div>
